# project_euler

./: LICENSE  build_image.sh  docker-compose.yml  dockerfile  pyproject.toml
problems/: problem_1.py  problem_2.py  problem_3.py  problem_4.py  problem_5.py
