[project]
name = "project-euler"
version = "0.1.0"
description = "Project Euler probles showcase in python"
authors = [
    {name = "Ilia Benson"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
